# antigravity-provider

./: README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: test.yml
scripts/: validate_hermes.sh
src/ag_proxy/: antigravity_client.py  credentials.py  errors.py  hermes_plugin.py  hermes_provider.py  runtime.py  transform.py
src/antigravity_provider/: cloudcode.py  models.py  oauth.py  openai_compat.py  runtime.py
tests/: test_antigravity_client.py  test_cloudcode.py  test_credentials.py  test_hermes_plugin.py  test_models.py  test_oauth.py  test_oauth_login_url.py  test_openai_compat.py  test_openai_response.py  test_runtime.py  test_tool_calls.py  test_transform.py
