[project]
name = "antigravity-provider"
version = "0.1.0"
description = "Hermes provider plugin for Google Antigravity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
